Re-fix width to get rid of extraneous horizontal scroll bar

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -60,7 +60,7 @@ label {
 
 #header {
     display: flex;
-    width: 100vw;
+    width: 100%;
     padding: 10px 0px;
 }
 
